apps/xsalgovic-ambulance-webapi/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xsalgovic-ambulance-webapi
spec:
  parentRefs:
    - name: wac-hospital-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /xsalgovic-api
      filters: 
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /api
      backendRefs:
        - group: ""
          kind: Service
          name: xsalgovic-ambulance-webapi
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /xsalgovic-openapi-ui
      backendRefs:
        - group: ""
          kind: Service
          name: xsalgovic-openapi-ui
          port: 80
    - matches:
        - path:
            type: Exact
            value: /xsalgovic-openapi
      filters: 
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /openapi
      backendRefs:
        - group: ""
          kind: Service
          name: xsalgovic-ambulance-webapi
          port: 80
